logogame implemented with firebase
logogame implemented with firebase, images stored in firebase and fetched random questions from firebase

--- a/src/games/logoquiz/logoGame.html
+++ b/src/games/logoquiz/logoGame.html
@@ -16,12 +16,13 @@
             <div class="col" id="questionBox">
             </div>
             <div class="col box">
-                <input type="radio" name="answer" id="optionA" required />
+                <input type="radio" name="answer" id="optionA" value="a" required/>
                 <img src="" alt="Option A" id="imgOptionA" />
-                <input type="radio" name="answer" id="optionB" required />
+                <input type="radio" name="answer" id="optionB" value="b" required />
                 <img src="" alt="Option B" id="imgOptionB" />
             </div>
             <button id="submit">Submit</button>
+            <div class="loading" id="loading">Loading...</div>
         </div>
     </section>
     <a href="../../trademark/trademark.html">
@@ -29,7 +30,7 @@
             <h1>Exit</h1>
         </button>
     </a>
-    <script src="logoGame.js"></script>
+    <script type="module" src="logoGame.js"></script>
 </body>
 
 </html>
