logoquiz game implemented
logoquiz game implemented

--- a/src/games/logoquiz/logoGame.html
+++ b/src/games/logoquiz/logoGame.html
@@ -25,7 +25,7 @@
             <div class="loading" id="loading">Loading...</div>
         </div>
     </section>
-    <a href="../../trademark/trademark.html">
+    <a href="../../homepage/homepage.html">
         <button class="b">
             <h1>Exit</h1>
         </button>
