--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -54,6 +54,7 @@
                   <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
                 </div>
               </div>
+              <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
             </div>
           </div>
           <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
