--- a/src/games/crossword/crossword.html
+++ b/src/games/crossword/crossword.html
@@ -35,10 +35,12 @@
     function returnToMain() {
       let mySolved = parseInt(localStorage.getItem("crosswordScore"));
       let userEmail = localStorage.getItem("email");
+      let gameType = localStorage.getItem("crosswordType") || 0;
       console.log(mySolved);
 
-      updateUserScore(userEmail, mySolved).then(() => {
+      updateUserScore(userEmail, mySolved, gameType).then(() => {
         localStorage.setItem("crosswordScore", 0);
+        localStorage.setItem("crosswordType", 0);
         window.location.href = "../../homepage/homepage.html";
       }).catch((error) => {
         console.error("Error updating score:", error);
