--- a/src/scoreboard/scoreboard.html
+++ b/src/scoreboard/scoreboard.html
@@ -61,20 +61,6 @@
         </div>
 
         <div class="leaderboard-box" id="quiz-board">
-            <h2>Quiz</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Rank</th>
-                        <th>Username</th>
-                        <th>Points</th>
-                    </tr>
-                </thead>
-                <tbody id="quiz"></tbody>
-            </table>
-        </div>
-
-        <div class="leaderboard-box" id="quiz-board">
             <h2>Logo Tradesecret</h2>
             <table>
                 <thead>
@@ -88,8 +74,8 @@
             </table>
         </div>
 
-        <div class="leaderboard-box" id="wordsearch-board">
-            <h2>Wordsearch</h2>
+        <div class="leaderboard-box" id="quiz-board">
+            <h2>Copyright Quiz</h2>
             <table>
                 <thead>
                     <tr>
@@ -98,12 +84,125 @@
                         <th>Points</th>
                     </tr>
                 </thead>
-                <tbody id="wordsearch"></tbody>
+                <tbody id="quizCopyright"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="quiz-board">
+            <h2>Quiz Patent</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="quizPatent"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="quiz-board">
+            <h2>Quiz Trademark</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="quizTrademark"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="quiz-board">
+            <h2>Quiz Tradesecret</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="quizTradesecret"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="wordsearch-board">
+            <h2>Wordsearch Copyright</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="wordsearchCopyright"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="wordsearch-board">
+            <h2>Wordsearch Patent</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="wordsearchPatent"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="wordsearch-board">
+            <h2>Wordsearch Trademark</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="wordsearchTrademark"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="wordsearch-board">
+            <h2>Wordsearch Tradesecret</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="wordsearchTradesecret"></tbody>
+            </table>
+        </div>
+
+
+        <div class="leaderboard-box" id="crossroad-board">
+            <h2>Crossword Copyright</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="crosswordCopyright"></tbody>
             </table>
         </div>
 
         <div class="leaderboard-box" id="crossroad-board">
-            <h2>Crossword</h2>
+            <h2>Crossword Patent</h2>
             <table>
                 <thead>
                     <tr>
@@ -112,7 +211,35 @@
                         <th>Points</th>
                     </tr>
                 </thead>
-                <tbody id="crossword"></tbody>
+                <tbody id="crosswordPatent"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="crossroad-board">
+            <h2>Crossword Trademark</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="crosswordTrademark"></tbody>
+            </table>
+        </div>
+
+        <div class="leaderboard-box" id="crossroad-board">
+            <h2>Crossword Tradesecret</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody id="crosswordTradesecret"></tbody>
             </table>
         </div>
     </div>
