--- a/src/games/wordsearch/WordSearch.html
+++ b/src/games/wordsearch/WordSearch.html
@@ -21,6 +21,59 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <h2 class="navbar-h2"><span>IPowerUp</span></h2>
+            <div class="nav-links">
+                <a href="homepage.html" class="home">Home</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Categories</button>
+                    <div class="dropdown-content">
+                        <a href="../../patent/patent.html">Patent</a>
+                        <a href="../../copyright/copyright.html">Copyright</a>
+                        <a href="../../trademark/trademark.html">Trademarks</a>
+                        <a href="../../tradesecret/tradesecret.html">Trade Secrets</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Games</button>
+                    <div class="dropdown-content">
+                        <div class="dropdown-submenu">
+                            <button class="subdropbtn">Quiz ▸</button>
+                            <div class="submenu-content">
+                                <a href="../quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                                <a href="../quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                                <a href="../quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                                <a href="../quiz/quiz.html?type=patent">Patent Quiz</a>
+                            </div>
+                        </div>
+                        <div class="dropdown-submenu">
+                            <button class="subdropbtn">Wordsearch ▸</button>
+                            <div class="submenu-content">
+                                <a href="../wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                            </div>
+                        </div>
+                        <div class="dropdown-submenu">
+                            <button class="subdropbtn">Crossword ▸</button>
+                            <div class="submenu-content">
+                                <a href="../crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                                <a href="../crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                                <a href="../crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                                <a href="../crossword/crossword.html?type=patent">Patent Crossword</a>
+                            </div>
+                        </div>
+                        <a href="../logoquiz/logoGame.html">Guess the Logo</a>
+                    </div>
+                </div>
+            </div>
+            <a class="btn1" href="../../scoreboard/scoreboard.html">Leaderboard</a>
+            <a class="btn" href="../../../index.html">Sign Out</a>
+            </div>
+        </nav>
+    </header>
     <section id="topScreen">
         <button id="return" onclick="returnToMain()">Finish</button>
         <div id="Timer" class="hide">Time Left: 40s</div>
@@ -28,12 +81,10 @@
             function returnToMain() {
                 let mySolved = parseInt(localStorage.getItem("wordSearchScore"));
                 let userEmail = localStorage.getItem("email");
-                let gameType = localStorage.getItem("wordsearchType");
                 console.log(mySolved);
 
-                updateUserScore(userEmail, mySolved, gameType).then(() => {
+                updateUserScore(userEmail, mySolved).then(() => {
                     localStorage.setItem("wordSearchScore", 0);
-                    localStorage.setItem("wordsearchType", 0);
                     window.location.href = "../../homepage/homepage.html";
                 }).catch((error) => {
                     console.error("Error updating score:", error);
@@ -42,7 +93,7 @@
         </script>
     </section>
     <h1>Word Search</h1>
-    <h2 id="gameInfo">Click-and-Drag to select words! Or press Race the Clock for a Challenge!</h2>
+    <h2 id="gameInfo" class="info-h2">Click-and-Drag to select words! Or press Race the Clock for a Challenge!</h2>
     <h3 id="themeIntro">The theme is: <span id="wordTheme"></span></h3>
     <section id="gameOptions">
         <button id="newGameButton" type="button">New Game</button>
