--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -28,7 +28,7 @@
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
               <div class="dropdown-submenu">
-                <button class="subdropbtn">Quiz ▸</button>
+                <a class="subdropbtn">Quiz ▸</a>
                 <div class="submenu-content">
                   <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
                   <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
@@ -37,7 +37,7 @@
                 </div>
               </div>
               <div class="dropdown-submenu">
-                <button class="subdropbtn">Wordsearch ▸</button>
+                <a class="subdropbtn">Wordsearch ▸</a>
                 <div class="submenu-content">
                   <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
                   <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
@@ -46,7 +46,7 @@
                 </div>
               </div>
               <div class="dropdown-submenu">
-                <button class="subdropbtn">Crossword ▸</button>
+                <a class="subdropbtn">Crossword ▸</a>
                 <div class="submenu-content">
                   <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
                   <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
