Made changes to menu bar in many pages

--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="copyright.css" rel="stylesheet" />
+  <link href="/src/navbar/navbar-style.css" rel="stylesheet" />
   <title>Copyright</title>
 </head>
 
@@ -13,7 +14,7 @@
     <nav class="navbar">
       <h2><span>IPowerUp</span></h2>
       <div class="nav-links">
-        <a href="homepage.html" class="home">Home</a>
+        <a href="/src/homepage/homepage.html" class="home">Home</a>
         <div class="dropdown">
           <a class="dropbtn">Categories</a>
           <div class="dropdown-content">
@@ -56,8 +57,11 @@
             <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
           </div>
         </div>
+      </div>
+      <div class="nav-buttons">
         <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
         <a class="btn" href="../../index.html">Sign Out</a>
+        <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
       </div>
     </nav>
   </header>
