--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="homepage.css" rel="stylesheet">
+  <link rel="stylesheet" href="/src/navbar/navbar-style.css">
   <title>Homepage</title>
 </head>
 
@@ -14,9 +15,9 @@
       <nav class="navbar">
         <h2><span>IPowerUp</span></h2>
         <div class="nav-links">
-          <a href="homepage.html" class="home">Home</a>
+          <a href="/src/homepage/homepage.html" class="home">Home</a>
           <div class="dropdown">
-            <button class="dropbtn">Categories</button>
+            <a class="dropbtn">Categories</a>
             <div class="dropdown-content">
               <a href="../patent/patent.html">Patent</a>
               <a href="../copyright/copyright.html">Copyright</a>
@@ -25,7 +26,7 @@
             </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Games</button>
+            <a class="dropbtn">Games</a>
             <div class="dropdown-content">
               <div class="dropdown-submenu">
                 <a class="subdropbtn">Quiz ▸</a>
@@ -57,8 +58,11 @@
               <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
             </div>
           </div>
+        </div>
+        <div class="nav-buttons">
           <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
           <a class="btn" href="../../index.html">Sign Out</a>
+          <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
         </div>
       </nav>
     </header>
