--- a/src/scoreboard/scoreboard.html
+++ b/src/scoreboard/scoreboard.html
@@ -8,41 +8,66 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="scoreboard.css">
+    <link rel="stylesheet" href="/src/navbar/navbar-style.css">
     <title>Leaderboard</title>
 </head>
 
 <body>
-    <div class="navbar">
-        <header>
-            <nav class="navbar">
-                <h2><span>IPowerUp</span></h2>
-                <div class="dropdown">
-                    <a href="../homepage/homepage.html" class="home">Home</a>
+    <header>
+        <nav class="navbar">
+          <h2><span>IPowerUp</span></h2>
+          <div class="nav-links">
+            <a href="/src/homepage/homepage.html" class="home">Home</a>
+            <div class="dropdown">
+              <a class="dropbtn">Categories</a>
+              <div class="dropdown-content">
+                <a href="../patent/patent.html">Patent</a>
+                <a href="../copyright/copyright.html">Copyright</a>
+                <a href="../trademark/trademark.html">Trademarks</a>
+                <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <a class="dropbtn">Games</a>
+              <div class="dropdown-content">
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Quiz ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+                  </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Categories</button>
-                    <div class="dropdown-content">
-                        <a href="../patent/patent.html">Patent</a>
-                        <a href="../copyright/copyright.html">Copyright</a>
-                        <a href="../trademark/trademark.html">Trademarks</a>
-                        <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
-                    </div>
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Wordsearch ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                  </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Games</button>
-                    <div class="dropdown-content">
-                        <a href="../games/quiz_trademark/tradesecret-quiz.html">Trademark Quiz</a>
-                        <a href="../games/quiz/tradesecret-quiz.html">Tradesecret Quiz</a>
-                        <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
-                        <a href="../games/crossword/patent-crossword.html">Crossword</a>
-                        <a href="../games/wordsearch/Copyright-wordsearch.html">Wordsearch</a>
-                    </div>
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Crossword ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+                  </div>
                 </div>
-                <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
-                <a class="btn" href="../../index.html">Sign Out</a>
-            </nav>
-        </header>
-    </div>
+                <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+              </div>
+            </div>
+          </div>
+          <div class="nav-buttons">
+            <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
+            <a class="btn" href="../../index.html">Sign Out</a>
+            <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
+          </div>
+        </nav>
+      </header>
 
 
     <div class="leaderboard-container">
