Updated copyright page

--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+    <header>
     <nav class="navbar">
       <h2><span>IPowerUp</span></h2>
       <div class="nav-links">
@@ -66,12 +66,14 @@
     </nav>
   </header>
   <div class="container">
-    <div class="row">
-      <div class="blur">
-        <div class="col col1">
-          <h1 class="ip-title"><span>Copyright</span></h1>
+  &nbsp;
+    <div class="blur">
+      <div class="col col1">
+        <h1 class="ip-title"><span>Copyright</span></h1>
+        <div class="cont">
           <div class="sliding-facts">
             <span class="nav-arrow" id="prev">&lt;</span>
+            <div class="facts-container">
             <p id="facts" class="ip-desc">
               Copyright is a legal right that grants creators exclusive rights to reproduce, use, and duplicate their
               original work for a set period. This protection applies to works created independently and in tangible
@@ -79,24 +81,30 @@
               theories, or certain items like brand names and logos. Once a copyright expires, the work enters the
               public domain.
             </p>
+            </div>
             <span class="nav-arrow" id="next">&gt;</span>
           </div>
-          <div class="card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/eEB5MYcj-Ns?si=qOE8pxjuFLRJFeyq"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+          <div class="game-tags">
+            <div class="game-btn"><a href="../games/wordsearch/WordSearch.html?type=copyright" class="button-container">WordSearch</a></div>
+            <div class="game-btn"><a href="../games/crossword/crossword.html" class="button-container">Crossword</a></div>
+            <div class="game-btn"><a href="../games/quiz/quiz.html" class="button-container">Quiz</a></div>
+            <div class="game-btn"><a href="../games/quiz/quiz.html" class="button-container">Video</a></div>
           </div>
+      </div>
+        <div class="card">
+          <iframe width="560" height="355" src="https://www.youtube.com/embed/eEB5MYcj-Ns?si=qOE8pxjuFLRJFeyq"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
         </div>
       </div>
     </div>
-    <div class="button-container">
-      <button type="button"><a href="../games/wordsearch/WordSearch.html?type=copyright">WordSearch</a></button>
-      <button type="button"><a href="../games/wordsearch/crossword.html?type=copyright">Crossword</a></button>
-      <button type="button"><a href="../games/quiz/quiz.html?type=copyright">Quiz</a></button>
-    </div>
-    <script src="copyright.js"></script>
-  </div>
+  <!-- <div class="game-tags">
+    <div><a href="../games/wordsearch/WordSearch.html?type=copyright" class="button-container">WordSearch</a></div>
+    <div><a href="../games/crossword/crossword.html" class="button-container">Crossword</a></div>
+    <div><a href="../games/quiz/quiz.html" class="button-container">Quiz</a></div>
+  </div> -->
+  <script src="copyright.js"></script>
 </body>
 
 </html>
