--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -62,7 +62,7 @@
         <div class="nav-buttons">
           <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
           <a class="btn" href="../../index.html">Sign Out</a>
-          <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
+          <a class="profile-pic" href="/src/profile/profile.html"><img src="/images/profile-pic.png"></a>
         </div>
       </nav>
     </header>
