--- a/src/profile/profile.html
+++ b/src/profile/profile.html
@@ -67,7 +67,7 @@
         <div class="profile-header">
             <img class="avatar" src="../../images/Avatar.png" alt="Avatar of Username" aria-label="User Avatar">
             <div class="user-details">
-                <h1 class="user-name" id="username">Username</h1>
+                <h1 class="user-name" id="username">myUsername</h1>
                 <p class="user-email" id="email">example@example.com</p>
             </div>
         </div>
