Story page css updated

--- a/src/copyright/copyright-story.html
+++ b/src/copyright/copyright-story.html
@@ -65,14 +65,24 @@
       </div>
     </nav>
   </header>
-  <div class="container" style="position: center;">
-    <video width="700" height="700" position="center" controls>
-        <source src="../../images/copyright.mp4" type="video/mp4">
-        
+  
+  <div class="container">
+    <div class="blur-overlay"></div>
+    <div class="video-cont">
+    <video width="900" height="700" controls>
+      <source src="../../images/copyright.mp4" type="video/mp4">
       Your browser does not support the video tag.
-      </video>
-      <script src="copyright.js"></script>
+    </video>
+    </div>
+    <div class="button-container">
+      <button class="previous">
+        <a href="../copyright/copyright.html">Previous</a>
+      </button>
+    </div>
   </div>
+    <!-- Button container below the video -->
+
+ 
 </body>
 
 </html>
