--- a/src/games/Story/TradeSceret-Story.html
+++ b/src/games/Story/TradeSceret-Story.html
@@ -70,18 +70,16 @@
     <div class="blur-overlay"></div>
     <div class="video-cont">
     <video width="900" height="700" controls>
-      <source src="../../images/copyright.mp4" type="video/mp4">
+      <source src="../../../images/trade-srcret.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     </div>
     <div class="button-container">
       <button class="previous">
-        <a href="../copyright/copyright.html">Previous</a>
+        <a href="../../tradesecret/tradesecret.html">Previous</a>
       </button>
     </div>
-  </div>
-    <!-- Button container below the video -->
-
+    </div>
  
 </body>
 
